--- a/main.html
+++ b/main.html
@@ -3,11 +3,61 @@
 <html>
 
 <head>
+	<title>AccioJob — Blog</title>
 	<link rel="stylesheet" href="styles.css">
+	
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <h1>Welcome to Accio Jobs!</h1>
+	<h1>
+    <a href="https://acciojob.com/blog" target="_blank" rel="noopener">Accio Job's Blog</a>
+  </h1>
+
+  <main>
+    <section>
+      <article>
+        <h2>Brute Force vs. Optimization</h2>
+        <img
+          src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000"
+          alt="Brute force vs optimization illustration"
+          height="200"
+        />
+        <h3><a href="#" title="Read: Brute Force vs. Optimization">Brute Force vs. Optimization</a></h3>
+        <p>
+          We can say that optimization is about designing smarter solutions that reduce time and space complexity while still producing correct results, whereas brute force explores all possibilities without regard to efficiency.
+        </p>
+      </article>
+      <article>
+        <h2>DSA vs. Competitive Programming</h2>
+        <img
+          src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000"
+          alt="Competitive programming setup"
+          height="200"
+        />
+        <h3><a href="#" title="Read: DSA vs. Competitive Programming">DSA vs. Competitive Programming</a></h3>
+        <p>
+          DSA or Competitive programming? Both develop problem-solving skills, but DSA focuses on fundamentals and patterns, while CP emphasizes speed, accuracy, and strategy under time constraints.
+        </p>
+      </article>
+      <article>
+        <h2>Complete Guide on FlexBox</h2>
+        <img
+          src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png"
+          alt="CSS Flexbox guide screenshot"
+          height="200"
+        />
+        <h3><a href="#" title="Read: Complete Guide on FlexBox">Complete Guide on FlexBox</a></h3>
+        <p>
+          As a job seeker, you may wonder how to quickly build responsive layouts; Flexbox simplifies alignment, spacing, and ordering so you can craft adaptive UIs with minimal CSS.
+        </p>
+      </article>
+
+    </section>
+  </main>
+	
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
