--- a/main.html
+++ b/main.html
@@ -24,9 +24,9 @@
           alt="Brute force vs optimization illustration"
           height="200"
         />
-        <h3><a href="#" title="Read: Brute Force vs. Optimization">Brute Force vs. Optimization</a></h3>
+        <h3><a href="https://course.acciojob.com/open-web-editor?question=18fa8f15-6e3f-4e84-b1bf-8b9a8b35eb90" title="Read: Brute Force vs. Optimization">Brute Force vs. Optimization</a></h3>
         <p>
-          We can say that optimization is about designing smarter solutions that reduce time and space complexity while still producing correct results, whereas brute force explores all possibilities without regard to efficiency.
+          We can say that optimization is...
         </p>
       </article>
       <article>
@@ -34,11 +34,11 @@
         <img
           src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000"
           alt="Competitive programming setup"
-          height="200"
+          height="200px"
         />
-        <h3><a href="#" title="Read: DSA vs. Competitive Programming">DSA vs. Competitive Programming</a></h3>
+        <h3><a href="https://course.acciojob.com/open-web-editor?question=18fa8f15-6e3f-4e84-b1bf-8b9a8b35eb90" title="Read: DSA vs. Competitive Programming">DSA vs. Competitive Programming</a></h3>
         <p>
-          DSA or Competitive programming? Both develop problem-solving skills, but DSA focuses on fundamentals and patterns, while CP emphasizes speed, accuracy, and strategy under time constraints.
+          DSA or Competitive programming?...
         </p>
       </article>
       <article>
@@ -46,11 +46,11 @@
         <img
           src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png"
           alt="CSS Flexbox guide screenshot"
-          height="200"
+          height="200px"
         />
-        <h3><a href="#" title="Read: Complete Guide on FlexBox">Complete Guide on FlexBox</a></h3>
+        <h3><a href="https://course.acciojob.com/open-web-editor?question=18fa8f15-6e3f-4e84-b1bf-8b9a8b35eb90" title="Read: Complete Guide on FlexBox">Complete Guide on FlexBox</a></h3>
         <p>
-          As a job seeker, you may wonder how to quickly build responsive layouts; Flexbox simplifies alignment, spacing, and ordering so you can craft adaptive UIs with minimal CSS.
+          As a job seeker, you may wonder...
         </p>
       </article>
 
