--- a/main.html
+++ b/main.html
@@ -10,7 +10,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	 <h1>Welcome to Accio Jobs!</h1>
+	 <marquee behavior="scroll" direction="left">
+    <h1>Welcome to Accio Jobs!</h1>
+  </marquee>
 	<h1>
     <a href="https://acciojob.com/blog" target="_blank" rel="noopener">Accio Job's Blog</a>
   </h1>
