--- a/main.html
+++ b/main.html
@@ -44,7 +44,7 @@
         </p>
       </article>
       <article>
-        <h2>Complete Guide on FlexBox</h2>
+        <!-- <h2>Complete Guide on FlexBox</h2> -->
         <img src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png"
           height="200px"  />
         <h3><a href="https://course.acciojob.com/open-web-editor?question=18fa8f15-6e3f-4e84-b1bf-8b9a8b35eb90" title="Read: Complete Guide on FlexBox">Complete Guide on FlexBox</a></h3>
